instructions.Instructions.scala.error
Erreur de compilation :
Instructions:6: error: not found: value doite
doite()
^Instructions:10: error: not found: value doite
doite()
^Instructions:14: error: not found: value doite
doite()
^