instructions.Instructions.scala.code
baisseBrosse()

avance()
avance()

doite()
avance()
avance()

doite()
avance()
avance()

doite()
avance()

leveBrosse()

avance()
droite()
droite()